fixed nav link alignment

--- a/footer.css
+++ b/footer.css
@@ -72,7 +72,7 @@ footer {
                 max-width: 10%;
             }
             #social-icons {
-                padding-left: 5rem;
+                padding: 0 5rem 0 5rem;
             }
             .col-xl-2 {
                 max-width: 12.66%;
