--- a/nav.css
+++ b/nav.css
@@ -26,3 +26,8 @@ nav.navbar-nav.mr-auto.mt-3 .nav-link a {
   border-bottom: transparent;
 }
 
+@media (min-width: 768px){
+.navbar-expand-md .navbar-collapse {
+  justify-content: flex-end;
+}
+  
